--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,110 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  font-size: 62.5%;
+}
+
+header {
+  background-color: #333;
+  height: 10vh;
+  font-size: 1.5rem;
+  overflow: hidden;
+  display: flex;
+}
+
+nav {
+  width: 80%;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: lightcyan;
+}
+
+nav ul {
+  list-style-type: none;
+  display: flex;
+  min-width: 20%;
+  font-size: 1.5rem;
+  justify-content: space-around;
+}
+
+.fas {
+  padding: 0 0.5rem;
+}
+
+/* main section */
+
+.hero {
+  height: 80vh;
+  padding: 0.5rem 0;
+  width: 80%;
+  margin: auto;
+}
+
+.gridForCard {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  font-size: 1.6rem;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 100;
+}
+
+.cardImage {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.card {
+  margin: 2rem;
+  padding: 1rem 0.5rem;
+  border: 0.1rem solid lightgray;
+  border-radius: 0.5rem;
+}
+
+.cardContent {
+  width: 90%;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+a {
+  text-decoration-line: none;
+}
+
+.cardTitle {
+  color: black;
+  font-size: 1.5rem;
+  padding: 1.5rem 0 0 0;
+}
+
+.cardRating {
+  margin: 0.5rem 0;
+}
+
+.cardPrice {
+  font-size: 2rem;
+  padding: 1.5rem 0 2.5rem 0;
+}
+
+h1 {
+  font-size: 3rem;
+}
+
+.fas{
+  padding:0;
+}
+
+.ratingText{
+  padding:0 0 0 1rem;
+}
+
+.rating{
+  padding: 1.5rem 0 0 0;
 }
