--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -135,8 +135,121 @@ h1 {
 .goBack{
   background-color: transparent;
   border:none;
+  margin-left:3rem;
 }
 
 .ProductScreenHero{
   margin:1.5rem 0;
+  font-size:1.5rem;
+  
+}
+
+.productGrid{
+  display:grid;
+  grid-template-columns: repeat(2,1fr);
+}
+
+.col1{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.productGrid img{
+  width:90%;
+  height:95%;
+  padding:1rem;
+}
+
+.productDescriptionGrid{
+  display:grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+ul{
+  list-style: none;
+}
+
+.col2{
+  display:flex;
+  flex-direction: column;
+  padding: 1rem 3rem 0 0;
+}
+
+.col2 li{
+  margin:1rem 0 0 0;
+}
+
+.ratingLi{
+  border-top:0.1rem solid gray;
+}
+
+.priceLi{
+  border-top:0.1rem solid gray;
+  padding:1rem 0 0 0 ;
+}
+
+.descriptionLi{
+  border-top:0.1rem solid gray;
+  padding:1rem 0 0 0;
+}
+
+.productPageTitle{
+  font-size: 2rem;
+  margin: 2rem 0;
+}
+
+
+
+.addToCartBox{
+  width:100%;
+  
+  display:grid;
+  grid-template-rows: 1fr 1fr min-content;
+  height: 30%;;
+}
+.btnCartBox button[disabled]{
+  background-color: gray;
+}
+
+.btnCartBox button{
+  border:none;
+  background-color: black;
+  color:white;
+  width:80%;
+  height: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding:1.5rem 0;
+
+}
+
+.btnCartBox{
+  /* width:80%;
+  margin:auto; */
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  border:0.1rem solid gray;
+  border-top:none;  
+  text-align: center;
+}
+
+
+
+.priceCartBox{
+  display:flex;
+  justify-content: space-around;
+  align-items: center;
+  border:0.1rem solid gray;
+}
+
+.stockCartBox{
+  display:flex;
+  justify-content: space-around;
+  align-items: center;
+  border:0.1rem solid gray;
+  border-top:none;
 }
