--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -31,33 +31,72 @@ nav ul {
   min-width: 20%;
   font-size: 1.5rem;
   justify-content: space-around;
-  
 }
 
 .fas {
   padding: 0 0.5rem;
 }
 
-.liLink{
-  color:lightgray;
-}
-
-nav h1{
+.liLink {
   color: lightgray;
 }
 
+nav h1 {
+  color: lightgray;
+}
+
+.userDropdown {
+  /* position: relative; */
+  color: black;
+}
+
+.dropdownUl {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  top: 5rem;
+  right: 0;
+  padding-left: 4rem;
+}
+
+.toggleDropdown {
+  opacity: 0;
+}
+
+.dropdownUl li {
+  background-color: whitesmoke;
+  border-bottom: 1px solid #333;
+  width: 35%;
+  padding: 1rem;
+  text-align: start;
+}
+
+.dropdownUl li:hover {
+  background-color: gray;
+}
+
+.fa-caret-down {
+  margin-left: 0.5rem;
+}
+
+.userProfile {
+  color: black;
+}
+
+.userName {
+  cursor: pointer;
+}
+/*-----------------------------------------*/
 /* Footer */
 
-footer{
-  height:10vh;
+footer {
+  height: 10vh;
   /* background-color: #333; */
-  display:flex;
+  display: flex;
   justify-content: center;
   align-items: center;
 }
-
-
-
+/*-------------------------------------------*/
 /* main section */
 
 .hero {
@@ -118,138 +157,481 @@ h1 {
   font-size: 3rem;
 }
 
-.fas{
-  padding:0;
+.fas {
+  padding: 0;
 }
 
-.ratingText{
-  padding:0 0 0 1rem;
+.ratingText {
+  padding: 0 0 0 1rem;
 }
 
-.rating{
+.rating {
   padding: 1.5rem 0 0 0;
 }
 
 /* Product page */
 
-.goBack{
+.goBack {
   background-color: transparent;
-  border:none;
-  margin-left:3rem;
+  border: none;
+  margin-left: 3rem;
 }
 
-.ProductScreenHero{
-  margin:1.5rem 0;
-  font-size:1.5rem;
-  
+.ProductScreenHero {
+  margin: 1.5rem 0;
+  font-size: 1.5rem;
 }
 
-.productGrid{
-  display:grid;
-  grid-template-columns: repeat(2,1fr);
+.productGrid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
 
-.col1{
-  display:flex;
+.col1 {
+  display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.productGrid img{
-  width:90%;
-  height:95%;
-  padding:1rem;
+.productGrid img {
+  width: 90%;
+  height: 95%;
+  padding: 1rem;
 }
 
-.productDescriptionGrid{
-  display:grid;
+.productDescriptionGrid {
+  display: grid;
   grid-template-columns: 1fr 1fr;
 }
 
-ul{
+ul {
   list-style: none;
 }
 
-.col2{
-  display:flex;
+.col2 {
+  display: flex;
   flex-direction: column;
   padding: 1rem 3rem 0 0;
 }
 
-.col2 li{
-  margin:1rem 0 0 0;
+.col2 li {
+  margin: 1rem 0 0 0;
 }
 
-.ratingLi{
-  border-top:0.1rem solid gray;
+.ratingLi {
+  border-top: 0.1rem solid gray;
 }
 
-.priceLi{
-  border-top:0.1rem solid gray;
-  padding:1rem 0 0 0 ;
+.priceLi {
+  border-top: 0.1rem solid gray;
+  padding: 1rem 0 0 0;
 }
 
-.descriptionLi{
-  border-top:0.1rem solid gray;
-  padding:1rem 0 0 0;
+.descriptionLi {
+  border-top: 0.1rem solid gray;
+  padding: 1rem 0 0 0;
 }
 
-.productPageTitle{
+.productPageTitle {
   font-size: 2rem;
   margin: 2rem 0;
 }
 
-
-
-.addToCartBox{
-  width:100%;
-  
-  display:grid;
-  grid-template-rows: 1fr 1fr min-content;
-  height: 30%;;
+.addToCartBox {
+  width: 100%;
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr min-content;
+  height: 35%;
 }
-.btnCartBox button[disabled]{
+.btnCartBox button[disabled] {
   background-color: gray;
 }
 
-.btnCartBox button{
-  border:none;
+.btnCartBox button {
+  border: none;
   background-color: black;
-  color:white;
-  width:80%;
+  color: white;
+  width: 80%;
   height: 80%;
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
-  padding:1.5rem 0;
-
+  padding: 1.5rem 0;
 }
 
-.btnCartBox{
+.btnCartBox {
   /* width:80%;
   margin:auto; */
-  display:flex;
+  display: flex;
   justify-content: center;
   align-items: center;
-  border:0.1rem solid gray;
-  border-top:none;  
+  border: 0.1rem solid gray;
+  border-top: none;
   text-align: center;
 }
 
-
-
-.priceCartBox{
-  display:flex;
+.priceCartBox {
+  display: flex;
   justify-content: space-around;
   align-items: center;
-  border:0.1rem solid gray;
+  border: 0.1rem solid gray;
 }
 
-.stockCartBox{
-  display:flex;
+.stockCartBox {
+  display: flex;
   justify-content: space-around;
   align-items: center;
-  border:0.1rem solid gray;
-  border-top:none;
+  border: 0.1rem solid gray;
+  border-top: none;
+}
+
+.col3Qty {
+  font-size: 1.5rem;
+
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border: 0.1rem solid gray;
+  border-top: none;
+}
+
+/*---------------------------------------------------------------------------------------------*/
+/*Cart Screen*/
+/*---------------------------------------------------------------------------------------------*/
+
+.container {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+}
+
+.productImage img {
+  height: 100%;
+  width: 100%;
+}
+
+.cartCol1 ul {
+  /* border: 1px solid black; */
+  /* display: flex;
+  justify-content: space-around;
+  align-items: center; */
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  align-items: center;
+  justify-content: center;
+}
+
+.cartCol1 ul li {
+  text-align: center;
+  font-size: 1.2rem;
+}
+
+.productName {
+  font-weight: 700;
+}
+
+.productNameLink {
+  color: black;
+}
+
+.productNameLink:hover {
+  text-decoration: underline;
+  font-size: 1.3rem;
+}
+
+.qty select {
+  border: none;
+  padding: 1rem 2rem;
+}
+
+/* .fa-trash:hover {
+  font-size: 2rem;
+  transition: 50ms;
+} */
+
+.remove button {
+  background-color: none;
+  border: none;
+}
+
+.remove button:hover {
+  background-color: lightgray;
+  padding: 1rem 0;
+  width: 50%;
+  margin: auto;
+  font-size: 1.5rem;
+  border: none;
+}
+
+/* .cartCol2 { */
+/* border: 1px solid blue; */
+/* } */
+.cartCol2 ul {
+  font-size: 2rem;
+  width: 80%;
+  margin: auto;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  /* border: 1px solid red; */
+}
+
+.cartCol2 ul li {
+  padding: 1rem 1rem;
+  width: 100%;
+  display: block;
+}
+
+.btnCheckout button {
+  border: none;
+  background-color: black;
+  color: white;
+  padding: 1rem;
+}
+
+.subTotal {
+  border: 1px solid black;
+  border-bottom: none;
+}
+
+.totalPrice {
+  border: 1px solid black;
+  border-top: none;
+  border-bottom: none;
+}
+
+.btnCheckout {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  border: 1px solid black;
+}
+
+/*--------------------------------------------------------------------------------------------*/
+/* Login */
+/*--------------------------------------------------------------------------------------------*/
+
+.signinScreen {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.containerForm {
+  display: flex;
+  flex-direction: column;
+  margin: 2rem 0;
+  font-size: 1.7rem;
+  width: 40%;
+}
+
+.containerForm label {
+  padding: 1rem 0 0.5rem 0;
+}
+
+.containerForm input {
+  border-style: none;
+  background-color: #f5f5dc;
+  padding: 1rem 0;
+  font-size: 1.5rem;
+}
+
+.containerForm button {
+  width: 20%;
+  padding: 1rem 0;
+  border-style: none;
+  background-color: black;
+  color: white;
+  margin: 1rem 0 0 0;
+}
+
+.shippingScreenWrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.shippingScreenWrapper h1 {
+  /* background-color: red; */
+  width: 40%;
+  font-size: 2.5rem;
+  margin-top: 1.5rem;
+  font-weight: 600;
+}
+
+/*--------------------------------*/
+/*checkout links*/
+/*--------------------------------*/
+
+.checkoutLinkWrapper ul {
+  display: flex;
+  justify-content: space-around;
+}
+
+.checkoutLinkWrapper ul li {
+  margin: 2rem 4rem;
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+.reduceRemOnForm {
+  margin: 1rem 0;
+}
+
+.normalLink {
+  color: black;
+}
+
+.disabledLink {
+  color: gray;
+}
+
+/*------------------------------------*/
+/*Place Order*/
+/*------------------------------------*/
+
+.checkoutWrapper {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+}
+
+.checkoutLeft {
+  display: grid;
+  grid-template-rows: repeat(3, min-content);
+  grid-row-gap: 2.5rem;
+}
+
+.checkoutLeft h2 {
+  padding-bottom: 1.5rem;
+}
+
+.checkoutShippingAddress p {
+  font-size: 1.5rem;
+  padding: 0.5rem 0;
+}
+
+.listGroup img {
+  height: 30%;
+  width: 30%;
+}
+
+.listGroup {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border-top: 1px solid gray;
+  padding: 1rem 0;
+}
+
+.listGroup li {
+  font-size: 1.3rem;
+  /* padding: 2rem 2rem; */
+}
+
+.checkoutPaymentMethod p {
+  font-size: 1.5rem;
+}
+
+.checkoutPaymentMethod,
+.checkoutOrderItems {
+  border-top: 1px solid gray;
+  padding-top: 1rem;
+}
+
+/*----------------------------------------*/
+/*Checkout Right*/
+/*----------------------------------------*/
+
+.checkoutCard {
+  /* background-color: #333; */
+  width: 80%;
+  margin: auto;
+}
+
+.checkoutCard ul {
+  border: 1px solid gray;
+  display: grid;
+  grid-template-rows: repeat(6, min-content);
+  grid-row-gap: 1rem;
+}
+
+.checkoutCard ul li {
+  /* display: flex;
+  justify-content: space-around; */
+  text-align: center;
+  border-top: 1px solid gray;
+  font-size: 1.5rem;
+}
+
+.checkoutCardli {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.checkoutCardBtnContainer {
+  padding: 0.5rem;
+}
+
+.checkoutCardBtnContainer button {
+  width: 100%;
+  padding: 1rem 0;
+  background-color: black;
+  color: white;
+  border: none;
+}
+
+a {
+  color: black;
+}
+a:hover {
+  text-decoration: underline;
+}
+
+.orderScreenOrderId {
+  margin: 1rem 0;
+}
+
+/*-------------------------------------------*/
+/*common msg style*/
+/*-------------------------------------------*/
+
+.danger {
+  color: #d8000c;
+  background-color: #ffd2d2;
+  display: flex;
+  align-items: center;
+  padding: 1rem 0 0 1rem;
+  margin-top: 0.5rem;
+}
+
+.success {
+  background-color: #dff2bf;
+  display: flex;
+  align-items: center;
+  padding: 1rem 0 0 1rem;
+  margin-top: 0.5rem;
+  color: #4f8a10;
+}
+
+/*--------------------------------*/
+/*profile screen*/
+/*--------------------------------*/
+
+.profileScreenWrapper {
+  display: grid;
+  grid-template-columns: min-content 1fr;
+}
+
+.profileForm {
+  width: 90%;
+}
+
+.profileForm button {
+  width: 50%;
 }
