--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,26 +7,25 @@
 html {
   font-size: 62.5%;
 }
-
+/* 
 header {
   background-color: #333;
   min-height: 10vh;
-  /* overflow: hidden; */
   display: flex;
-}
+} */
 
-nav {
+/* nav {
   width: 80%;
   margin: auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
   color: lightcyan;
-}
+} */
 
-.navFont {
+/* .navFont {
   font-size: 1.2rem;
-}
+} */
 
 /*
 nav ul {
@@ -645,4 +644,55 @@ a:hover {
 
 .profileForm button {
   width: 50%;
+}
+
+/*Carousel*/
+
+.carousel-item-next,
+.carousel-item-prev,
+.carousel-item.active {
+  display: flex;
+}
+
+.carousel-caption {
+  position: absolute;
+  top: 0;
+  height: min-content;
+}
+
+.carousel-caption h2 {
+  color: #fff;
+}
+
+.carousel img {
+  height: 300px;
+  padding: 30px;
+  margin: 40px;
+  border-radius: 50%;
+}
+
+.carousel a {
+  margin: 0 auto;
+}
+
+.carousel-indicators {
+  padding: 2rem 20rem;
+  display: flex;
+  justify-content: space-around;
+}
+
+.carousel-indicators button {
+  padding: 0.15rem 2rem;
+  border-radius: 0;
+  border: none;
+  background-color: gray;
+}
+
+.carousel-indicators button:focus {
+  outline: none;
+}
+
+.carousel-indicators button.active {
+  transition: all 1s ease-in;
+  background-color: white;
 }
